--- a/src/Deps.Core/Deps.Core.csproj
+++ b/src/Deps.Core/Deps.Core.csproj
@@ -5,4 +5,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NuGet.ProjectModel" Version="$(NuGetProjectModelVersion)" />
+  </ItemGroup>
+
 </Project>
